tests/ui/mysql/gated/chrono.stderr
error: support for column type DATE (0xa) at position 0 (name: Some("date")) requires optional feature `chrono`
 --> $DIR/chrono.rs:2:13
  |
2 |     let _ = sqlx::query!("select CONVERT(now(), DATE) date");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: support for column type TIME (0xb) at position 0 (name: Some("time")) requires optional feature `chrono`
 --> $DIR/chrono.rs:4:13
  |
4 |     let _ = sqlx::query!("select CONVERT(now(), TIME) time");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: support for column type DATETIME (0xc) at position 0 (name: Some("datetime")) requires optional feature `chrono`
 --> $DIR/chrono.rs:6:13
  |
6 |     let _ = sqlx::query!("select CONVERT(now(), DATETIME) datetime");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
